fix: fixing album layout bug between tablet and desktop breakpoints

--- a/assets/style.css
+++ b/assets/style.css
@@ -1013,7 +1013,7 @@ footer h5 {
     }
 
     .album-cover {
-    max-width: 210px;
+    max-width: 230px;
     padding: 25px 5px;
     }
 
